# auto-blog

./: .flake8  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/api/endpoints/: ai.py  settings.py  site_info.py  template.py  wordpress.py
api/app/db/: crud.py  models.py  schemas.py
api/app/db/crud/: __init__.py  settings.py  template.py
api/app/db/schemas/: __init__.py  settings.py  template.py
app/: Dockerfile  main.py
app/api/endpoints/: ai.py  wordpress.py
web/: Dockerfile  package-lock.json  package.json
web/src/: App.tsx  index.tsx  interfaces.ts
web/src/component/: AppBar.tsx  SiteTable.tsx
web/src/hooks/: usePostData.ts  useSettings.ts  useSite.ts  useTemplate.ts
web/src/pages/: Home.tsx  Settings.tsx  SiteInfo.tsx  TemplateList.tsx
web/src/utils/: api.ts  usePostData.ts
